update with code explinations

--- a/scripts/script1.ipynb
+++ b/scripts/script1.ipynb
@@ -442,6 +442,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We began by removing non-country rows, such as metadata footers, to retain only valid observations. The dataset was then reshaped from wide to long format by unpivoting year columns, converting text-based year labels into numeric form, and filtering out missing or placeholder values. Finally, we pivoted indicators into separate columns, renamed them for clarity, converted all values to numeric, and dropped rows with no usable data to produce a clean, analysis-ready dataset."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "1. Dataset cleaning"
    ]
   },
@@ -647,6 +654,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This plot shows the global average of life expectancy from 1960 to 2023. The steady increase reflects improvements in healthcare, nutrition, and living conditions worldwide."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
@@ -677,6 +691,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This scatterplot illustrates a strong inverse relationship: countries with higher fertility rates tend to have lower life expectancy. The fitted regression line highlights this negative correlation."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
@@ -702,6 +723,13 @@
     "plt.title(\"Correlation Between Development Indicators\")\n",
     "plt.tight_layout()\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This heatmap visualizes pairwise Pearson correlation coefficients among life expectancy, fertility rate, population growth, and school enrollment. Life expectancy is positively associated with school enrollment and negatively with fertility and population growth."
    ]
   },
   {
@@ -752,6 +780,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This multivariate regression quantifies the combined effect of fertility rate, population growth, and school enrollment on life expectancy. All three predictors are statistically significant, reinforcing that education and controlled fertility support population health."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
@@ -779,6 +814,13 @@
     "plt.ylabel(\"Enrollment (% gross)\")\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This line plot tracks global average primary school enrollment (% gross) over time. The steady upward trend signals progress in education access globally, especially in developing countries."
    ]
   }
  ],
