--- a/report/report.qmd
+++ b/report/report.qmd
@@ -81,6 +81,50 @@ This project uses four key indicators from the WDI:
 -   **School Enrollment, Primary (% gross)** — `SE.PRM.ENRR`
 -   **GDP per capita (current US$)** - `NY.GDP.PCAP.CD`
 
+## Summary Statistics
+
+Basic descriptive statistics illustrate the wide variation across countries and over time. Life expectancy ranged from less than 50 years to over 85 years, reflecting significant disparities in health outcomes globally. Fertility rates vary dramatically, from under 1.5 births per woman in some developed nations to over 7 births per woman in parts of Sub-Saharan Africa.
+
+## Life Expectancy Trends
+
+Globally, life expectancy has shown a steady upward trend. Notably, countries like Rwanda and Ethiopia have experienced gains of over 15 years since 2000, highlighting the success of health interventions.
+
+SQL-based analysis revealed that despite overall improvements, some countries, due to conflict, pandemics, or governance challenges, have witnessed stagnation or declines in life expectancy.
+
+## Fertility Rate Patterns
+
+Fertility rates have generally declined worldwide, aligning with increased educational attainment and urbanization. SQL correlation analysis found a strong negative relationship (-0.68) between fertility rate and life expectancy, confirming demographic transition theory.
+
+## School Enrollment Trends
+
+Primary school enrollment rates have risen significantly, contributing to enhanced life outcomes. However, disparities remain, especially in low-income countries, indicating gaps in access and quality.
+
+## Population Growth and Development Challenges
+
+Countries with high population growth rates, such as Niger and Angola, face challenges in scaling infrastructure, healthcare, and education systems to meet the needs of expanding populations.
+
+SQL analyses show that rapid population growth often correlates with lower life expectancy and lower primary enrollment rates.
+
+## Advanced Insights
+
+### Life Expectancy Growth
+
+Calculating life expectancy growth rates from 2000 to 2023 reveals stark contrasts: while many nations made large strides, others struggled to maintain gains.
+
+### Fertility and Enrollment Relationship
+
+An inverse relationship between school enrollment rates and fertility persists across decades. Higher primary enrollment is associated with reduced fertility rates, reinforcing the critical role of female education.
+
+### Regional Inequalities
+
+Europe and East Asia lead in life expectancy, while Sub-Saharan Africa lags behind, with gaps exceeding 15 years in some cases. Regional averages show persistent inequality despite global improvements.
+
+### Countries Below Global Average
+
+Over 50 countries fall below the 2023 global average life expectancy of 73 years. These countries are predominantly located in Africa and parts of South Asia.
+
+## Data Preparation
+
 ```{python}
 import pandas as pd
 import seaborn as sns
@@ -219,19 +263,41 @@ have higher life expectancy.
 
 ## Conclusion
 
-Our analysis shows that demographic and education indicators are deeply
-intertwined with population health. Life expectancy has improved
-dramatically worldwide since 1960, particularly in countries with
-declining fertility and improved school enrollment.
+Our SQL-driven analysis confirms strong interdependencies among fertility, education, population growth, and life expectancy.
 
-Multivariable regression confirms the strong influence of fertility rate
-on life expectancy, with additional positive effects from educational
-access. While population growth plays a less clear role, it may be
-relevant when considered in combination with economic or geographic
-context.
+Investments in education, particularly for girls, and access to healthcare emerge as vital strategies for improving national development outcomes. Countries that have successfully managed demographic transitions by lowering fertility and expanding education access have reaped significant health and longevity benefits.
 
-This project reinforces the importance of investing in education and
-healthcare to foster long-term development and improve quality of life
-globally.
+Nonetheless, stark regional disparities remain, requiring continued focus on equitable development strategies globally.
+
+## Future Work
+
+Future extensions could incorporate:
+
+- Economic indicators (GDP per capita, health expenditure)
+- Inequality measures (Gini coefficient)
+- Health-specific variables (vaccination coverage)
+
+Deeper causal modeling (e.g., instrumental variable regression) could further unpack the relationships identified here.
+
+---
+
+# References
+
+- World Bank, World Development Indicators
+- QTM 350 Course Materials
+
+---
+
+# Appendix: SQL Query Highlights
+
+Summarized SQL queries included:
+
+- Calculation of average life expectancy and fertility over time
+- Correlation estimations between fertility, education, and life expectancy
+- Identification of top and bottom countries by growth and outcomes
+- Analysis of regional development patterns
+
+All queries were conducted within an SQLite database and results visualized using Python libraries.
+
 
 ------------------------------------------------------------------------
